// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createDbWorker initializes correctly 1`] = `
[
  {
    "owner": {
      "createdAt": "1970-01-01T00:00:00.003Z",
      "encryptionKey": Uint8Array [
        173,
        165,
        204,
        225,
        74,
        240,
        76,
        99,
        46,
        18,
        104,
        4,
        0,
        136,
        188,
        132,
        99,
        57,
        151,
        4,
        147,
        44,
        59,
        91,
        61,
        162,
        116,
        243,
        186,
        98,
        25,
        4,
      ],
      "id": "MdVYFAxShUluuZKVWQfYL",
      "mnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        111,
        64,
        118,
        108,
        245,
        65,
        176,
        98,
        173,
        247,
        85,
        78,
        30,
        167,
        192,
        203,
      ],
    },
    "type": "onInit",
  },
]
`;

exports[`createDbWorker initializes correctly 2`] = `
{
  "schema": {
    "indexes": [
      {
        "name": "evolu_history_ownerId_timestamp",
        "sql": "create index evolu_history_ownerId_timestamp on evolu_history (
          "ownerId",
          "timestamp"
        )",
      },
      {
        "name": "evolu_history_ownerId_table_id_column_timestampDesc",
        "sql": "create unique index evolu_history_ownerId_table_id_column_timestampDesc on evolu_history (
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp" desc
        )",
      },
      {
        "name": "evolu_timestamp_index",
        "sql": "create index evolu_timestamp_index on evolu_timestamp (
        "ownerId",
        "l",
        "t",
        "h1",
        "h2",
        "c"
      )",
      },
    ],
    "tables": [
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "testTable",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "_testTable",
      },
      {
        "columns": [
          "key",
          "value",
        ],
        "name": "evolu_config",
      },
      {
        "columns": [
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp",
          "value",
        ],
        "name": "evolu_history",
      },
      {
        "columns": [
          "mnemonic",
          "id",
          "encryptionKey",
          "createdAt",
          "writeKey",
          "timestamp",
        ],
        "name": "evolu_owner",
      },
      {
        "columns": [
          "ownerId",
          "t",
          "h1",
          "h2",
          "c",
          "l",
        ],
        "name": "evolu_timestamp",
      },
    ],
  },
  "tables": [
    {
      "name": "testTable",
      "rows": [],
    },
    {
      "name": "_testTable",
      "rows": [],
    },
    {
      "name": "evolu_config",
      "rows": [
        {
          "key": "protocolVersion",
          "value": 0,
        },
      ],
    },
    {
      "name": "evolu_history",
      "rows": [],
    },
    {
      "name": "evolu_owner",
      "rows": [
        {
          "createdAt": "1970-01-01T00:00:00.003Z",
          "encryptionKey": {
            "data": [
              173,
              165,
              204,
              225,
              74,
              240,
              76,
              99,
              46,
              18,
              104,
              4,
              0,
              136,
              188,
              132,
              99,
              57,
              151,
              4,
              147,
              44,
              59,
              91,
              61,
              162,
              116,
              243,
              186,
              98,
              25,
              4,
            ],
            "type": "Buffer",
          },
          "id": "MdVYFAxShUluuZKVWQfYL",
          "mnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
          "timestamp": "1970-01-01T00:00:00.000Z-0000-8a15cbdf169d6215",
          "writeKey": {
            "data": [
              111,
              64,
              118,
              108,
              245,
              65,
              176,
              98,
              173,
              247,
              85,
              78,
              30,
              167,
              192,
              203,
            ],
            "type": "Buffer",
          },
        },
      ],
    },
    {
      "name": "evolu_timestamp",
      "rows": [],
    },
  ],
}
`;

exports[`local mutation 1`] = `
[
  {
    "owner": {
      "createdAt": "1970-01-01T00:00:00.008Z",
      "encryptionKey": Uint8Array [
        173,
        165,
        204,
        225,
        74,
        240,
        76,
        99,
        46,
        18,
        104,
        4,
        0,
        136,
        188,
        132,
        99,
        57,
        151,
        4,
        147,
        44,
        59,
        91,
        61,
        162,
        116,
        243,
        186,
        98,
        25,
        4,
      ],
      "id": "MdVYFAxShUluuZKVWQfYL",
      "mnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        111,
        64,
        118,
        108,
        245,
        65,
        176,
        98,
        173,
        247,
        85,
        78,
        30,
        167,
        192,
        203,
      ],
    },
    "type": "onInit",
  },
  {
    "onCompleteIds": [],
    "patches": [],
    "tabId": "DYM5TJn7gEx0z1duDCZbm",
    "type": "onChange",
  },
  {
    "tabId": "DYM5TJn7gEx0z1duDCZbm",
    "type": "onReceive",
  },
]
`;

exports[`local mutation 2`] = `
[
  {
    "name": "testTable",
    "rows": [],
  },
  {
    "name": "_testTable",
    "rows": [
      {
        "createdAt": "1970-01-01T00:00:00.009Z",
        "id": "CaTw-bM9tdhdvUIv7-7QD",
        "isDeleted": null,
        "name": "test",
        "updatedAt": "1970-01-01T00:00:00.009Z",
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "key": "protocolVersion",
        "value": 0,
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [],
  },
  {
    "name": "evolu_owner",
    "rows": [
      {
        "createdAt": "1970-01-01T00:00:00.008Z",
        "encryptionKey": {
          "data": [
            173,
            165,
            204,
            225,
            74,
            240,
            76,
            99,
            46,
            18,
            104,
            4,
            0,
            136,
            188,
            132,
            99,
            57,
            151,
            4,
            147,
            44,
            59,
            91,
            61,
            162,
            116,
            243,
            186,
            98,
            25,
            4,
          ],
          "type": "Buffer",
        },
        "id": "MdVYFAxShUluuZKVWQfYL",
        "mnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
        "timestamp": "1970-01-01T00:00:00.000Z-0000-8a15cbdf169d6215",
        "writeKey": {
          "data": [
            111,
            64,
            118,
            108,
            245,
            65,
            176,
            98,
            173,
            247,
            85,
            78,
            30,
            167,
            192,
            203,
          ],
          "type": "Buffer",
        },
      },
    ],
  },
  {
    "name": "evolu_timestamp",
    "rows": [],
  },
]
`;

exports[`local mutation 3`] = `
[
  {
    "name": "testTable",
    "rows": [],
  },
  {
    "name": "_testTable",
    "rows": [],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "key": "protocolVersion",
        "value": 0,
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [],
  },
  {
    "name": "evolu_owner",
    "rows": [
      {
        "createdAt": "1970-01-01T00:00:00.008Z",
        "encryptionKey": {
          "data": [
            173,
            165,
            204,
            225,
            74,
            240,
            76,
            99,
            46,
            18,
            104,
            4,
            0,
            136,
            188,
            132,
            99,
            57,
            151,
            4,
            147,
            44,
            59,
            91,
            61,
            162,
            116,
            243,
            186,
            98,
            25,
            4,
          ],
          "type": "Buffer",
        },
        "id": "MdVYFAxShUluuZKVWQfYL",
        "mnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
        "timestamp": "1970-01-01T00:00:00.000Z-0000-8a15cbdf169d6215",
        "writeKey": {
          "data": [
            111,
            64,
            118,
            108,
            245,
            65,
            176,
            98,
            173,
            247,
            85,
            78,
            30,
            167,
            192,
            203,
          ],
          "type": "Buffer",
        },
      },
    ],
  },
  {
    "name": "evolu_timestamp",
    "rows": [],
  },
]
`;

exports[`mutate before init 1`] = `
[
  {
    "owner": {
      "createdAt": "1970-01-01T00:00:00.006Z",
      "encryptionKey": Uint8Array [
        173,
        165,
        204,
        225,
        74,
        240,
        76,
        99,
        46,
        18,
        104,
        4,
        0,
        136,
        188,
        132,
        99,
        57,
        151,
        4,
        147,
        44,
        59,
        91,
        61,
        162,
        116,
        243,
        186,
        98,
        25,
        4,
      ],
      "id": "MdVYFAxShUluuZKVWQfYL",
      "mnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        111,
        64,
        118,
        108,
        245,
        65,
        176,
        98,
        173,
        247,
        85,
        78,
        30,
        167,
        192,
        203,
      ],
    },
    "type": "onInit",
  },
  {
    "onCompleteIds": [],
    "patches": [],
    "tabId": "VEpB2gvl_fqBEkmGiGH5l",
    "type": "onChange",
  },
  {
    "tabId": "VEpB2gvl_fqBEkmGiGH5l",
    "type": "onReceive",
  },
]
`;

exports[`mutate before init 2`] = `
[
  {
    "name": "testTable",
    "rows": [],
  },
  {
    "name": "_testTable",
    "rows": [
      {
        "createdAt": "1970-01-01T00:00:00.007Z",
        "id": "IftYOy3PChCWos2Aglxpz",
        "isDeleted": null,
        "name": "test",
        "updatedAt": "1970-01-01T00:00:00.007Z",
      },
    ],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "key": "protocolVersion",
        "value": 0,
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [],
  },
  {
    "name": "evolu_owner",
    "rows": [
      {
        "createdAt": "1970-01-01T00:00:00.006Z",
        "encryptionKey": {
          "data": [
            173,
            165,
            204,
            225,
            74,
            240,
            76,
            99,
            46,
            18,
            104,
            4,
            0,
            136,
            188,
            132,
            99,
            57,
            151,
            4,
            147,
            44,
            59,
            91,
            61,
            162,
            116,
            243,
            186,
            98,
            25,
            4,
          ],
          "type": "Buffer",
        },
        "id": "MdVYFAxShUluuZKVWQfYL",
        "mnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
        "timestamp": "1970-01-01T00:00:00.000Z-0000-8a15cbdf169d6215",
        "writeKey": {
          "data": [
            111,
            64,
            118,
            108,
            245,
            65,
            176,
            98,
            173,
            247,
            85,
            78,
            30,
            167,
            192,
            203,
          ],
          "type": "Buffer",
        },
      },
    ],
  },
  {
    "name": "evolu_timestamp",
    "rows": [],
  },
]
`;

exports[`mutations 1`] = `
[
  {
    "owner": {
      "createdAt": "1970-01-01T00:00:00.004Z",
      "encryptionKey": Uint8Array [
        173,
        165,
        204,
        225,
        74,
        240,
        76,
        99,
        46,
        18,
        104,
        4,
        0,
        136,
        188,
        132,
        99,
        57,
        151,
        4,
        147,
        44,
        59,
        91,
        61,
        162,
        116,
        243,
        186,
        98,
        25,
        4,
      ],
      "id": "MdVYFAxShUluuZKVWQfYL",
      "mnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
      "type": "AppOwner",
      "writeKey": Uint8Array [
        111,
        64,
        118,
        108,
        245,
        65,
        176,
        98,
        173,
        247,
        85,
        78,
        30,
        167,
        192,
        203,
      ],
    },
    "type": "onInit",
  },
  {
    "onCompleteIds": [],
    "patches": [],
    "tabId": "2fPrxrsZ1yB46CYjEPB3P",
    "type": "onChange",
  },
  {
    "tabId": "2fPrxrsZ1yB46CYjEPB3P",
    "type": "onReceive",
  },
]
`;

exports[`mutations 2`] = `
[
  {
    "name": "testTable",
    "rows": [
      {
        "createdAt": "1970-01-01T00:00:00.005Z",
        "id": "bttUxKhbRUr7IJrC5e_Dy",
        "isDeleted": null,
        "name": "test",
        "updatedAt": "1970-01-01T00:00:00.005Z",
      },
    ],
  },
  {
    "name": "_testTable",
    "rows": [],
  },
  {
    "name": "evolu_config",
    "rows": [
      {
        "key": "protocolVersion",
        "value": 0,
      },
    ],
  },
  {
    "name": "evolu_history",
    "rows": [
      {
        "column": "name",
        "id": {
          "data": [
            195,
            255,
            229,
            93,
            188,
            240,
            122,
            95,
            20,
            133,
            143,
            26,
            84,
            43,
            35,
            232,
          ],
          "type": "Buffer",
        },
        "ownerId": {
          "data": [
            128,
            87,
            31,
            173,
            149,
            230,
            206,
            93,
            128,
            2,
            246,
            220,
            162,
            236,
            95,
            168,
          ],
          "type": "Buffer",
        },
        "table": "testTable",
        "timestamp": {
          "data": [
            0,
            0,
            0,
            0,
            0,
            5,
            0,
            0,
            138,
            21,
            203,
            223,
            22,
            157,
            98,
            21,
          ],
          "type": "Buffer",
        },
        "value": "test",
      },
    ],
  },
  {
    "name": "evolu_owner",
    "rows": [
      {
        "createdAt": "1970-01-01T00:00:00.004Z",
        "encryptionKey": {
          "data": [
            173,
            165,
            204,
            225,
            74,
            240,
            76,
            99,
            46,
            18,
            104,
            4,
            0,
            136,
            188,
            132,
            99,
            57,
            151,
            4,
            147,
            44,
            59,
            91,
            61,
            162,
            116,
            243,
            186,
            98,
            25,
            4,
          ],
          "type": "Buffer",
        },
        "id": "MdVYFAxShUluuZKVWQfYL",
        "mnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
        "timestamp": "1970-01-01T00:00:00.005Z-0000-8a15cbdf169d6215",
        "writeKey": {
          "data": [
            111,
            64,
            118,
            108,
            245,
            65,
            176,
            98,
            173,
            247,
            85,
            78,
            30,
            167,
            192,
            203,
          ],
          "type": "Buffer",
        },
      },
    ],
  },
  {
    "name": "evolu_timestamp",
    "rows": [
      {
        "c": 1,
        "h1": 155913513212828,
        "h2": 37262955245534,
        "l": 2,
        "ownerId": {
          "data": [
            128,
            87,
            31,
            173,
            149,
            230,
            206,
            93,
            128,
            2,
            246,
            220,
            162,
            236,
            95,
            168,
          ],
          "type": "Buffer",
        },
        "t": {
          "data": [
            0,
            0,
            0,
            0,
            0,
            5,
            0,
            0,
            138,
            21,
            203,
            223,
            22,
            157,
            98,
            21,
          ],
          "type": "Buffer",
        },
      },
    ],
  },
]
`;

exports[`reset 1`] = `
{
  "schema": {
    "indexes": [],
    "tables": [],
  },
  "tables": [],
}
`;
